font color changed

--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@ that he has worked on and the skills that he has acquired over the years.">
       <div class="rights col-md-9 center-auto"> <a href="https://www.gmail.com" target="blank" class="mail-to">saikatkundu.kundu25@gmail.com</a><br><br><br>
         
         
-        <p style="color:rgb(39, 38, 38);">I hope that I was able to delight you and fulfill your expectations as a developer. If you liked my work then feel free to contact me on the above mentioned contact details.</p>
-        <p class="margin-top-30" style="color:rgb(39, 38, 38);"><small> Copyright ©2018 Saikat Kundu </small></p>
+        <p style="color:white;">I hope that I was able to delight you and fulfill your expectations as a developer. If you liked my work then feel free to contact me on the above mentioned contact details.</p>
+        <p class="margin-top-30" style="color:white;"><small> Copyright ©2018 Saikat Kundu </small></p>
       </div>
     </div>
   </footer>
