--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ that he has worked on and the skills that he has acquired over the years.">
 <div id="wrap"> 
   
   <!-- Header -->
-  <header class="header light">
+  <header class="header light" >
     <div class="sticky">
       <div class="container">
         
@@ -68,7 +68,7 @@ that he has worked on and the skills that he has acquired over the years.">
           <!-- NAV -->
           <div class="collapse navbar-collapse" id="nav-open-btn">
             <ul class="nav">
-              <li><a href="index.html">HOME </a></li>
+              <li><a href="#wrap">HOME </a></li>
               <li> <a href="#hi">ABOUT </a> </li>
               <li> <a href="#projects">PORTFOLIO</a></li>
               <li> <a href="#skills">SKILLS</a></li>
