--- a/index.html
+++ b/index.html
@@ -410,9 +410,9 @@ that he has worked on and the skills that he has acquired over the years.">
       <div class="container"> 
         
         <!-- Heading Block -->
-        <div class="heading-block">
-          <h6 class=" animate fadeInRight" data-wow-delay="0.4s">here's my</h6>
-          <span class="huge-tittle">Testimonial</span></div>
+        <div class="heading-block white">
+          <h6 class=" animate fadeInRight" data-wow-delay="0.4s" style="color:white;">here's my</h6>
+          <span class="huge-tittle" style="color:white;">Testimonial</span></div>
         
         <!-- Slider -->
         <div class="slider-sec">
